--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/001/a/cas001.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/001/a/cas001.a.style.css
@@ -141,8 +141,8 @@
 	border-left: 2.2em solid transparent;
 }
 
-.requiredCell {
-	background-color: #FAEC82;
+.ntsgrid-alarm {
+	background-color: #FAEC82 !important;
 }
 
 #item_role_table_cover {
