kaf022: fix error style between table

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -127,7 +127,11 @@
 	background-color: #CFF1A5;
 }
 
-.viewmodel-a {
+/* .viewmodel-a {
+	margin-bottom: 20px;
+} */
+
+.nts-fixed-table {
 	margin-bottom: 20px;
 }
 
