kaf022: fix error style label for control tabel a_27

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -453,7 +453,7 @@
 												data-bind="ntsCheckBox: { checked: retrictPreUseFlg },attr:{
 														tabindex:48 + $index()
 													}">#{i18n.getText('KAF022_61')}</div></td>
-										<td><span class="label" id="a7_27">#{i18n.getText('KAF022_63')}</span>
+										<td><span class="label label-a27" id="a7_27">#{i18n.getText('KAF022_63')}</span>
 											<span  id="a4_8"
 												data-bind="ntsComboBox: {
 													options: $parent.itemListA7_20,
