kaf022: fix style

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -101,7 +101,7 @@
 								<tbody data-bind="foreach : dataA4Display">
 									<tr>
 										<td class="color-header"><span class="label " data-bind="text: a4_5"></span></td>
-										<td>
+										<td class="td-table-a4">
 											<div class="a4_checkbox" id="a4_6"
 												data-bind="ntsCheckBox: { checked: a4_6 },attr:{
 														tabindex:1 + $index()*1
