--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -1,3 +1,13 @@
+table tbody tr {
+	padding-top: 2px !important;
+	padding-bottom: 2px !important;
+}
+
+td div {
+	position: relative;
+	vertical-align: middle;
+}
+
 #a4_7, #a4_8, #a5_16, #a7_row1 {
 	width: 80px;
 }
