--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/cps006.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/cps006.a.style.css
@@ -48,6 +48,9 @@ input.ntsSearchBox {
 .distane {
 	margin-bottom: 5px;
 }
+.control-group{
+	margin-bottom: 5px !important;
+}
 
 #ctgName {
 	width: 200px !important;
