--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/index.xhtml
@@ -67,9 +67,8 @@
 							<span id="defaultName" data-bind="text: categoryNameDefault()"></span>
 						</div>
 
-						<div>
-							<div id='col1' data-bind="ntsFormLabel: {required: true, constraint: 'CategoryName'}"
-								class='distane'>
+						<div class='valign-center control-group'>
+							<div id='col1' data-bind="ntsFormLabel: {required: true, constraint: 'CategoryName'}">
 								<label>#{i18n.getText('CPS006_9')}</label>
 							</div>
 							<input id="ctgName"
