fix tabindex , textarea

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/b.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/b.xhtml
@@ -113,7 +113,7 @@
 							visibleItemsCount: 2,
 							value: selectedCodeB30,
 							optionsText: 'name',
-							editable: true,
+							editable: false,
 							enable: true,
 							columns: [
 								{ prop: 'name', length: 2 },
@@ -156,7 +156,7 @@
 						visibleItemsCount: 8,
 						value: selectedCodeB33,
 						optionsText: 'name',
-						editable: true,
+						editable: false,
 						enable: true,
 						columns: [
 							{ prop: 'name', length: 2 },
