--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/f/index.xhtml
@@ -34,7 +34,10 @@
 					text: textId,
 					aslink: asLink,
 					enable: enable,
-					onchange: onchangefileupload.bind($data, filename)}"></div>
+					uploadFinished:  uploadFinished,
+					immediateUpload: true,
+					stereoType: stereoType
+					}"></div>
 				</div>
 				<table id="grid2"></table>
 			</div>
