remove comma kaf022 a

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -422,7 +422,7 @@
 											<span class="ntsControl special-a7"> <label class="ntsRadioBox">
 
 													<input  type="radio" name="textRadioA7_18"
-													data-bind="checkedValue: 1, checked: retrictPreMethodFlg, enable: true,,attr:{
+													data-bind="checkedValue: 1, checked: retrictPreMethodFlg, enable: true,attr:{
 														tabindex:45 
 													}" />
 													<span class="box"></span><span class="label">#{i18n.getText('KAF022_66')}</span>
