cmf001d: update UI

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/cmf001.d.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/cmf001.d.style.css
@@ -38,3 +38,12 @@
 .fixed-flex-layout-right {
 	flex: 1;
 }
+
+.my-active-row {
+    background: #007fff !important;
+    color: #ffffff;
+}
+
+.my-active-row:hover {
+    color: #000000;
+}
