--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
@@ -66,6 +66,7 @@
 						<input  type="radio" name="textRadio" data-bind="checkedValue: 1, checked: selectedValueD13, enable: true" />
 						<span class="box"></span>
 						<span class="label">#{i18n.getText('KAF022_75')}</span>
+						<span>(</span>
 						<span class="label">#{i18n.getText('KAF022_186')}</span>
 						<span tabindex="9" data-bind="ntsRadioBoxGroup: {
 						options: itemListD15,
@@ -73,6 +74,7 @@
 						optionsText: 'name',
 						value: selectedIdD15,
 						enable: enableD15}" />
+						<span>)</span>
 					</label>
 					<div>
 						<label class="ntsRadioBox">
