update screen cmf 001 g

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/cmf001.g.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/cmf001.g.style.css
@@ -17,6 +17,11 @@
   display: table-column;         
   width: 110px;   
 }
+.div-table-col-1 {
+  float: left; 
+  display: table-column;         
+  width: 200px;   
+}
 .div-table-col-2 {
   float: left; 
   display: table-column;         
