[CCG001] fix List BusinessType

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -271,7 +271,7 @@
 												name: '#[CCG001_59]',
 												height: 235,
 												options: listWorkType,
-												optionsValue: 'workTypeCode',
+												optionsValue: 'businessTypeCode',
 												columns: workTypeColumns,
 												multiple: true,
 												value: selectedWorkTypeCode
