--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/a/cmf001.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/a/cmf001.a.style.css
@@ -2,8 +2,8 @@
 	margin-bottom: 10px;
 }
 
-#contents-area{
-	margin:0px 150px 20px 150px;
+.button-area{
+	margin:0px 120px 0px 120px;
 }
 
 .image-left{
