--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/a/index.xhtml
@@ -9,11 +9,12 @@
 		<ui:define name="htmlHead">
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="cmf001.a.style.css" />
+			<com:scriptfile path="cmf001.a.start.js" />
 			
 		</ui:define>
 		
 		<ui:define name="content">
-			<div id="contents-area">
+			<div id="contents-area" class="button-area">
 				<div class="label-action">
 					#{i18n.getText('CMF001_26')}
 				</div>
