--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/m/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/m/index.xhtml
@@ -59,8 +59,8 @@
 										<label>#{i18n.getText('CMF001_407')}</label>
 									</div>
 								</td>
-								<td><input data-bind="ntsTextEditor: {value: simpleValue}" class="td_center_sp" /></td>
-								<td class="td_right"><input data-bind="ntsTextEditor: {value: simpleValue}" /></td>
+								<td><input data-bind="ntsTextEditor: {value: newValCode" class="td_center_sp" /></td>
+								<td class="td_right"><input data-bind="ntsTextEditor: {value: newValName" /></td>
 							</tr>
 						</table>
 						<div class="checkbox_bottom" data-bind="ntsCheckBox: { checked: checked, enable: enable, text: '#{i18n.getText('CMF001_410')}',  style: 'warnpanel'}"></div>
