update model screen h

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
@@ -96,8 +96,8 @@
 							<div data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_252')}</div>
 						</div>
 						<div tabindex ="9" class = "div-table-col">
-							<div tabindex ="-1" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectMinorityItem()[0], optionValue: 'code', enable: $parent.inputMode, name: '#{i18n.getText('CMF001_254')}', optionText: 'name', group: 'fixedValCls' }"></div>
-							<div tabindex ="-1" style = "margin-top:15px;" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectMinorityItem()[1], optionValue: 'code', enable: $parent.inputMode, name: '#{i18n.getText('CMF001_255')}', optionText: 'name', group: 'fixedValCls' }"></div>
+							<div tabindex ="-1" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectFixedValItem()[0], optionValue: 'code', enable: $parent.inputMode, name: '#{i18n.getText('CMF001_254')}', optionText: 'name', group: 'fixedValCls' }"></div>
+							<div tabindex ="-1" style = "margin-top:15px;" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectFixedValItem()[1], optionValue: 'code', enable: $parent.inputMode, name: '#{i18n.getText('CMF001_255')}', optionText: 'name', group: 'fixedValCls' }"></div>
 						</div>
 						<div style="display: inline">
 							<input tabindex ="10" data-bind="ntsTextEditor: {
