--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
@@ -16,53 +16,45 @@
 		</ui:define>
 
 		<ui:define name="content">
-			<div class="contents-area">
+			<div class="contents-area" data-bind="with: characterDataFormatSetting">
 				<div class = "label" style = "margin-left: 20px; margin-top: 10px;" >#{i18n.getText('CMF001_265')}</div>
 				<div class ="div-table">
 					<div class = "div-table-row">
 						<div class = "div-table-col-2" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_266')}</div>
-						<div class = "div-table-col">
-							<div>
-								<div class = "div-table-col" data-bind="ntsRadioButton: {checked: effectDigit, optionValue: true, optionText: '#{i18n.getText('CMF001_268')}', group: 'effectDigitCls'}"></div>
-							</div>
-							<div>
-								<div style = "margin-top:15px; " class = "div-table-col" data-bind="ntsRadioButton: {checked: deffectDigit, optionValue: false, optionText: '#{i18n.getText('CMF001_269')}', group: 'effectDigitCls' }"></div>
-							</div>
+						<div tabindex = "1" class = "div-table-col">
+							<div tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[0], name: '#[CMF001_268]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls'}"></div>
+							<div tabindex ="-1" style = "margin-top:15px; " class = "div-table-col" data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[1], name: '#[CMF001_269]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls' }"></div>
 						</div>
 						<div class = "div-table-col" >
-							<input  data-bind="ntsTextEditor: {
+							<input tabindex = "2" data-bind="ntsTextEditor: {
 								value: startDigit,
 								option : {width : '30px'},
-								enable: effectDigit}" />
+								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div  class = "label" style= "display:inline">#{i18n.getText('CMF001_270')}</div>
 						</div>
 						<div  class = "div-table-col" >
-							<input  data-bind="ntsTextEditor: {
+							<input tabindex = "3"  data-bind="ntsTextEditor: {
 								value: endDigit,
 								option : {width : '30px'},
-								enable: effectDigit}" />
+								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div class =" label" style= "display:inline">#{i18n.getText('CMF001_273')}</div>
 						</div>
 					</div>
 					<div class = "div-table-row">
 						<div class = "div-table-col-2" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_275')}</div>
-						<div class = "div-table-col">
-							<div>
-								<div data-bind="ntsRadioButton: {checked: effectFixedLen, optionValue: false, optionText: '#{i18n.getText('CMF001_232')}', group: 'minorityDigitCls' }"></div>
-							</div>
-							<div>
-								<div style = "margin-top:15px;" data-bind="ntsRadioButton: {checked: deffectFixedLen, optionValue: false, optionText: '#{i18n.getText('CMF001_233')}', group: 'minorityDigitCls' }"></div>
-							</div>
+						<div tabindex = "4" class = "div-table-col">
+							<div tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[0], name: '#[CMF001_277]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls'}"></div>
+							<div tabindex ="-1" style = "margin-top:15px; " class = "div-table-col" data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[1], name: '#[CMF001_278]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls' }"></div>
 						</div>
 						<div  class = "div-table-col" >
-							<input  data-bind="ntsTextEditor: {
-								value: fixedLen,
+							<input tabindex = "5"  data-bind="ntsTextEditor: {
+								value: codeEditDigit,
 								option : {width : '30px'},
-								enable: effectFixedLen}" />
+								enable: !(codeEditing() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div class =" label" style= "display:inline">#{i18n.getText('CMF001_280')}</div>
 						</div>
 						<div class = "div-table-col">
-							<div style = "display:inline-block; width :150px;" id="H3_7" data-bind="ntsComboBox: {
+							<div tabindex = "6" style = "display:inline-block; width :150px;" id="H3_7" data-bind="ntsComboBox: {
 								options: [
 								{code: 0, name: '#{i18n.getText('CMF001_236')}'},
 								{code: 1, name: '#{i18n.getText('CMF001_236')}'},
@@ -71,9 +63,9 @@
 								editable: false,
 								optionsValue: 'code',
 								visibleItemsCount: 5,
-								value: selectedFixedLenMeth ,
+								value: codeEditingMethod ,
 								optionsText: 'name',
-								enable: true}">
+								enable: !(codeEditing() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}">
 							</div>
 						</div>
 					</div>
@@ -82,7 +74,7 @@
 							<div data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_290')}</div>
 						</div>
 						<div class = "div-table-col">
-							<button style="display: inline; position:relative; top : 10px;	" data-bind="click: open001_K">#{i18n.getText('CMF001_291')}</button>
+							<button tabindex = "7" style="display: inline; position:relative; top : 10px;	" data-bind="click: $parent.open001_K, enable: $parent.inputMode">#{i18n.getText('CMF001_291')}</button>
 						</div>
 						<div id = "H4_3" style="display: inline; position:relative; top : 10px;	" class="label">コード</div>
 						<div id = "H4_4" style="display: inline; position:relative; top : 10px;	margin-left: 15px;" class="label">コード変換名</div>
@@ -91,27 +83,23 @@
 						<div class = "div-table-col-2">
 							<div data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_292')}</div>
 						</div>
-						<div class = "div-table-col">
-							<div>
-								<div data-bind="ntsRadioButton: {checked: effectFixedVal, optionValue: false, optionText: '#{i18n.getText('CMF001_254')}', group: 'fixedValCls' }"></div>
-							</div>
-							<div>
-								<div style = "margin-top:15px;" data-bind="ntsRadioButton: {checked: deffectFixedVal, optionValue: false, optionText: '#{i18n.getText('CMF001_255')}', group: 'fixedValCls' }"></div>
-							</div>
+						<div tabindex = "8" class = "div-table-col">
+							<div tabindex ="-1" class = "div-table-col" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectFixedValItem()[0], name: '#[CMF001_294]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedValCls'}"></div>
+							<div tabindex ="-1" style = "margin-top:15px; " class = "div-table-col" data-bind="ntsRadioButton: {checked: fixedValue, option: $parent.effectFixedValItem()[1], name: '#[CMF001_295]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedValCls' }"></div>
 						</div>
 						<div style="display: inline">
-							<input  data-bind="ntsTextEditor: {
-								value: fixedVal,
+							<input tabindex = "9"  data-bind="ntsTextEditor: {
+								value: valueOfFixed,
 								option : {width : '200px'},
-								enable: effectFixedVal}" />
+								enable: !(fixedValue() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 						</div>
 					</div>
 				</div>
 			</div>
 			
 			<div id="functions-area-bottom">
-				<button id="btn_H6_1" class="x-large proceed " data-bind="click: saveCharacerSetting">#{i18n.getText('CMF001_257')}</button>
-				<button id="btn_H6_2" class="large" data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_268')}</button>
+				<button tabindex = "10" id="btn_H6_1" class="x-large proceed " data-bind="click: saveCharacterSetting">#{i18n.getText('CMF001_257')}</button>
+				<button tabindex = "11" id="btn_H6_2" class="large" data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_268')}</button>
 			</div>
 			
 		</ui:define>
