--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/cmf001.f.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/cmf001.f.style.css
@@ -37,19 +37,8 @@
 	margin-left: 100px!important;
 }
 
-#fixed-table {
-  counter-reset: rowNumber;
-}
-
-#fixed-table tr {
-  counter-increment: rowNumber;
-}
-
-#fixed-table tr td:first-child::before {
-  content: counter(rowNumber);
-  margin-left: 0.5em;
-}
-
-.order-color {
+.order-column {
 	background-color: #CFF1A5;
+	text-align: right;
+    padding-right: 7px!important;
 }
