--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
@@ -22,10 +22,13 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
-				<button id="F1_1" class="proceed" tabindex="1">#{i18n.getText('CMF001_190')}</button>
+				<button id="F1_1" class="proceed"
+					data-bind="click: addCodeConvert_click, enable: screenMode() == 1"
+					tabindex="1">#{i18n.getText('CMF001_190')}</button>
 				<button id="F1_2" class="proceed" tabindex="2">#{i18n.getText('CMF001_191')}</button>
 				<button id="F1_3" data-bind="click: closeDialog" tabindex="3">#{i18n.getText('CMF001_192')}</button>
-				<button id="F1_4" class="danger push-right-4x" tabindex="4">#{i18n.getText('CMF001_193')}</button>
+				<button id="F1_4" class="danger push-right-4x"
+					data-bind="enable: screenMode() == 1" tabindex="4">#{i18n.getText('CMF001_193')}</button>
 			</div>
 			<div id="contents-area">
 				<div id="content">
@@ -38,22 +41,23 @@
 												label: '#{i18n.getText('CMF001_194')}',
 												targetKey: 'dispConvertCode',
 												comId: 'F3_1',
-												items: convertItems,
-												selected: currentConvertCode,
+												items: codeConvertList,
+												selected: selectedConvertCode,
 												selectedKey: 'dispConvertCode',
 												fields: ['dispConvertCode', 'dispConvertName'],
 												mode: 'igGrid'
-											}" tabindex="5"/>
+											}"
+								tabindex="5" />
 							<table id="F3_1"
 								data-bind="ntsGridList: {
-												dataSource: convertItems,
+												dataSource: codeConvertList,
 												primaryKey: 'dispConvertCode' ,
 												columns: [
 															{headerText: '#{i18n.getText('CMF001_195')}', key: 'dispConvertCode', width: 80},
 							                				{headerText: '#{i18n.getText('CMF001_196')}', key: 'dispConvertName', width: 250}
 							                			],
 												multiple: false,
-												value: currentConvertCode ,
+												value: selectedConvertCode ,
 												rows: 15,
 												showNumbering: true
 											}">
@@ -68,20 +72,22 @@
 									data-bind="ntsFormLabel: { required:true }">#{i18n.getText('CMF001_197')}</div>
 							</div>
 							<div>
-								<input style="width: 30px"
+								<input id="F4_2" style="width: 30px"
 									data-bind="ntsTextEditor: {
 													value: convertCode,
 													constraint: 'ConvertCode',
 													required: true,
-													enable: true
-												}" tabindex="6"/>
-								<input
+													enable: screenMode() == 0
+												}"
+									tabindex="6" />
+									<input id="F4_3"
 									data-bind="ntsTextEditor: {
 													value: convertName,
 													constraint: 'ConvertName',
 													required: true,
 													enable: true
-												}" tabindex="7"/>
+												}"
+									tabindex="7" />
 							</div>
 						</div>
 						<div class="div_line">
@@ -89,11 +95,13 @@
 								data-bind="ntsFormLabel: { required:true }">#{i18n.getText('CMF001_200')}</div>
 						</div>
 						<div class="div_line">
-							<button  style="margin-left: 20px;" id="F4_5" data-bind="click: addDetail" tabindex="8">#{i18n.getText('CMF001_201')}</button>
-							<button id="F4_6" class="danger push-right-1x" data-bind="click: removeDetail" tabindex="9">#{i18n.getText('CMF001_202')}</button>
+							<button style="margin-left: 20px;" id="F4_5"
+								data-bind="click: addDetailConvert_click" tabindex="8">#{i18n.getText('CMF001_201')}</button>
+							<button id="F4_6" class="danger push-right-1x"
+								data-bind="click: deleteDetailConvert_click" tabindex="9">#{i18n.getText('CMF001_202')}</button>
 						</div>
 						<div class="div_line">
-							<table id="fixed-table">
+							<table id="detail-code-convert">
 								<colgroup>
 									<col width="35px" />
 									<col width="120px" />
@@ -106,15 +114,17 @@
 										<th class="ui-widget-header">#{i18n.getText('CMF001_204')}</th>
 									</tr>
 								</thead>
-								<tbody data-bind="foreach: detailConvertItems">
-									<tr>
-										<td class="order-color"></td>
-										<td><input data-bind="ntsTextEditor: {value: outputItem, option: {width: '93px'}}" /></td>
-										<td><input data-bind="ntsTextEditor: {value: systemCode, option: {width: '123px'}}" /></td>
+								<tbody data-bind="foreach: codeConvertDetailList">
+									<tr data-bind="attr: { 'data-id': lineNumber }">
+										<td class="order-column"><span data-bind="text: lineNumber"></span></td>
+										<td><input
+											data-bind="ntsTextEditor: {value: outputItem, option: {width: '93px'}}" /></td>
+										<td><input
+											data-bind="ntsTextEditor: {value: systemCode, option: {width: '123px'}}" /></td>
 									</tr>
 								</tbody>
 							</table>
-							
+
 						</div>
 						<div class="div_line">
 							<div data-bind="ntsFormLabel: {}">#{i18n.getText('CMF001_207')}</div>
