cmf001 b&d: update UI

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
@@ -158,10 +158,10 @@
 										]}"></div>
 								</td>
 								<td style ="text-align: center;">
-								    <i data-bind="ntsIcon: { no: 5, width: 30, height: 30 }, click: function() { alert('yeah!') }"></i>
+								    <i data-bind="ntsIcon: { no: 5, width: 30, height: 30 }, click: function() {$parent.dataTypeSetting($data)}"></i>
 								</td>
 								<td style ="text-align: center;">
-									<i data-bind="ntsIcon: { no: 5, width: 30, height: 30 }, click: function() { alert('yeah!') }"></i>
+									<i data-bind="ntsIcon: { no: 5, width: 30, height: 30 }, click: function() {$parent.openCMF001l($data)}"></i>
 								</td>
 							</tr>
 						</tbody>
